k8-manifests/prod/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-app
  namespace: prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nodejs-app
  template:
    metadata:
      labels:
        app: nodejs-app
    spec:
      # THIS SECTION IS REQUIRED
      imagePullSecrets:
        - name: regcred 
      containers:
        - name: nodejs-app
          image: gauravbhardwajb96/nodejs-app:prod-f95b40a15d896f376e88125f8a09dc15859f5356
          ports:
            - containerPort: 5000
          # ... (rest of your configuration)
