k8-manifests/prod/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-service
  namespace: prod
  labels:
    app: nodejs-app
spec:
  ports:
    - port: 5000        
      targetPort: 5000
      protocol: TCP
  type: ClusterIP    
  selector:
    app: nodejs-app
